[package]
name = "rekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
primitive-types = "0.12.1"
thiserror = "1.0.38"
tokio = { version = "1.25.0",  features = ["full"] }
url = "2.3.1"
