[package]
name = "rekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
block-padding = "0.3.2"
bytes = { version ="1.4.0", features = ["serde"] }
cipher = { version = "0.4.3", features = ["block-padding"] }
ctr = "0.9.2"
derive_more = "0.99.17"
digest = "0.10.6"
fixed-hash = "0.8.0"
futures = "0.3.26"
hmac = "0.12.1"
open-fastrlp = {version = "0.1.4", features = ["derive", "std"]}
rand = "0.8.5"
secp256k1 = { version = "0.26.0", features = ["global-context", "rand-std", "recovery"] }
serde = "1.0.152"
sha2 = "0.10.6"
sha3 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.25.0",  features = ["full"] }
url = "2.3.1"
