[package]
name = "rekt"
version = "0.1.0"
edition = "2021"
authors = ["mralj"]
description = "Quick way to lose $$$"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[dependencies]
aes = "0.8.2"
block-padding = "0.3.2"
bytes = { version ="1.4.0", features = ["serde"] }
cipher = { version = "0.4.3", features = ["block-padding"] }
ctr = "0.9.2"
derive_more = "0.99.17"
digest = "0.10.6"
fixed-hash = "0.8.0"
futures = "0.3.26"
hmac = "0.12.1"
impl-serde = "0.4.0"
num-integer = "0.1.45"
open-fastrlp = { path="../open-fastrlp", features = ["derive", "std"]}
rand = "0.8.5"
secp256k1 = { version = "0.27", features = ["global-context", "rand-std", "recovery"] }
serde = {version = "1.0.152", features = ["derive"]}
sha2 = "0.10.6"
sha3 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.25.0",  features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io", "codec"] }
tracing = { version = "0.1.37"}
tracing-subscriber = "0.3.16"
url = "2.3.1"
num-traits = "0.2"
num-derive = "0.3"
hex = "0.4.3"
ethers = "2.0"
crc = "3.0.1"
hex-literal = "0.4.1"
once_cell = "1.18.0"
snap = "1.1.0"
pin-project = "1.1.0"
tokio-stream = "0.1.14"
toml = "0.7.4"
kanal = "0.1.0-pre8"
dashmap = "5.4.0"
public-ip = "0.2.2"
enr = {version = "0.9.0", features = ["rust-secp256k1"]}
chrono = "0.4.31"
serde_json = "1.0.107"
anyhow = "1.0.75"
clap = {version = "4.4.6", features = ["derive"]}
warp = "0.3.6"
color-print = "0.3.5"
static_init = "1.0.3"
