[package]
name = "rekt"
version = "0.1.0"
edition = "2021"
authors = ["mralj"]
description = "Quick way to lose $$$"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[dependencies]
aes = "0.8.3"
block-padding = "0.3.3"
bytes = { version ="1.5.0", features = ["serde"] }
cipher = { version = "0.4.4", features = ["block-padding"] }
ctr = "0.9.2"
derive_more = "0.99.17"
digest = "0.10.7"
fixed-hash = "0.8.0"
futures = "0.3.29"
hmac = "0.12.1"
impl-serde = "0.4.0"
num-integer = "0.1.45"
open-fastrlp = { path="../open-fastrlp", features = ["derive", "std"]}
rand = "0.8.5"
secp256k1 = { version = "0.27", features = ["global-context", "rand-std", "recovery"] }
serde = {version = "1.0.192", features = ["derive"]}
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.34.0",  features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io", "codec"] }
tracing = { version = "0.1.40", features = ["release_max_level_off"] }
tracing-subscriber = "0.3.18"
url = "2.4.1"
num-traits = "0.2.17"
num-derive = "0.4.1"
hex = "0.4.3"
ethers = "2.0.10"
crc = "3.0.1"
hex-literal = "0.4.1"
once_cell = "1.18.0"
snap = "1.1.0"
pin-project = "1.1.3"
tokio-stream = "0.1.14"
toml = "0.8.8"
kanal = "0.1.0-pre8"
dashmap = "5.5.3"
public-ip = "0.2.2"
enr = {version = "0.9.1", features = ["rust-secp256k1"]}
chrono = "0.4.31"
serde_json = "1.0.108"
anyhow = "1.0.75"
clap = {version = "4.4.8", features = ["derive"]}
warp = "0.3.6"
color-print = "0.3.5"
static_init = "1.0.3"
mimalloc = "0.1.39"
twox-hash = "1.6.3"
google-sheets4 = "5.0.3"
reqwest = "0.11.22"
num_cpus = "1.16.0"
